@@ -9,94 +9,406 @@ import java.util.*;
 import java.util.concurrent.*;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.atomic.AtomicLong;
+import java.util.function.Consumer;
+
+import cn.ncw.logger.log.NCWLoggerFactory;
 
 /**
  * 多功能流式媒体播放器 - 支持多种音频格式和高级功能
+ * <p>
+ * 优化要点：
+ * 1. 使用枚举替代int常量，提高类型安全性
+ * 2. 提取播放列表管理器，分离职责
+ * 3. 提取事件发布器，解耦事件处理
+ * 4. 强化资源管理和异常处理
+ * 5. 优化线程安全和并发控制
+ * 6. 改进API设计，提高可用性
  */
+
 public class AdvancedStreamAudioPlayer {
 
-    // 播放状态常量
-    public static final int STATE_PLAYING = 0;
-    public static final int STATE_PAUSED = 1;
-    public static final int STATE_STOPPED = 2;
-    public static final int STATE_BUFFERING = 3;
+    @Getter
+    private final NCWLoggerFactory logger;
 
-    // 播放模式常量
-    public static final int PLAY_MODE_NORMAL = 0;      // 顺序播放
-    public static final int PLAY_MODE_REPEAT_ONE = 1;  // 单曲循环
-    public static final int PLAY_MODE_REPEAT_ALL = 2;  // 顺序循环
-    public static final int PLAY_MODE_SHUFFLE = 3;     // 无序循环
+    // 播放状态枚举
+    public enum PlaybackState {
+        PLAYING, PAUSED, STOPPED, BUFFERING, ERROR
+    }
+
+    // 播放模式枚举
+    @Getter
+    public enum PlayMode {
+        NORMAL("顺序播放"),
+        REPEAT_ONE("单曲循环"),
+        REPEAT_ALL("顺序循环"),
+        SHUFFLE("随机播放");
+
+        private final String description;
+
+        PlayMode(String description) {
+            this.description = description;
+        }
+
+    }
 
     // 支持的文件格式
     private static final Set<String> SUPPORTED_FORMATS = Set.of(
             "wav", "mp3", "aiff", "au", "snd", "flac"
     );
 
-    // 成员变量
-    private SourceDataLine sourceDataLine;
-    private volatile Thread playbackThread;
-    private AudioInputStream audioStream;
-    private volatile boolean playing;
-    private volatile boolean paused;
+    // 常量配置
+    private static final int DEFAULT_BUFFER_SIZE = 8192;
+    private static final double DEFAULT_VOLUME = 0.8;
+    private static final int POSITION_UPDATE_THRESHOLD = 1000; // 位置更新阈值（帧）
 
-    @Getter
-    private volatile int playbackState;
-    private final Object playLock = new Object();
+    // 核心音频组件
+    private volatile SourceDataLine sourceDataLine;
+    private volatile Thread playbackThread;
+    private volatile AudioInputStream audioStream;
     private final Object audioStreamLock = new Object();
 
-    // 音量控制相关
-    private FloatControl volumeControl;
-
+    // 播放控制
+    private final AtomicBoolean playing = new AtomicBoolean(false);
+    private final AtomicBoolean paused = new AtomicBoolean(false);
     @Getter
-    private double currentVolume = 0.8;
-    private float minVolume;
-    private float maxVolume;
-    private boolean volumeSupported = false;
+    private volatile PlaybackState playbackState = PlaybackState.STOPPED;
+    private final Object playControlLock = new Object();
 
-    // 位置控制相关
-    private File audioFile;
+    // 音频信息
+    private File currentAudioFile;
     private AudioFormat originalFormat;
-
     @Getter
-    private long totalFrames;
-
+    private final AtomicLong totalFrames = new AtomicLong(0);
     @Getter
-    private volatile long currentFrame;
+    private final AtomicLong currentFrame = new AtomicLong(0);
     private int frameSize;
 
+    // 音量控制
+    private FloatControl volumeControl;
     @Getter
-    private boolean positionSupported = true;
-
-    // 播放列表相关
-    private List<File> playlist;
-    private AtomicInteger currentTrackIndex;
-
+    private final AtomicDouble currentVolume = new AtomicDouble(DEFAULT_VOLUME);
+    private float minVolume;
+    private float maxVolume;
     @Getter
-    private volatile int playMode = PLAY_MODE_NORMAL;
-    private List<Integer> shuffleIndices;  // 用于记录随机播放顺序
-    private AtomicBoolean isShuffleGenerated = new AtomicBoolean(false);
+    private boolean volumeSupported = false;
 
-    // 线程池管理
-    private ExecutorService executorService;
-    private final AtomicBoolean executorShutdown = new AtomicBoolean(false);
+    // 播放列表管理
+    private final PlaylistManager playlistManager;
 
-    // 音效控制相关
-    private Map<String, FloatControl> soundControls;
+    // 音效控制
+    private final Map<String, FloatControl> soundControls = new ConcurrentHashMap<>();
+    @Getter
     private boolean equalizerSupported = false;
 
-    // 统计信息
-    private long totalPlayTime;
-    private long startTime;
-    private Map<String, Integer> playCount;
+    // 事件系统
+    private final PlaybackEventPublisher eventPublisher;
 
-    // 事件监听器
-    private List<PlaybackEventListener> listeners;
+    // 统计信息
+    private final AtomicLong totalPlayTime = new AtomicLong(0);
+    private volatile long startTime = 0;
+    private final Map<String, AtomicInteger> playCount = new ConcurrentHashMap<>();
+
+    // 线程池
+    private final ExecutorService executorService;
+    private final AtomicBoolean executorShutdown = new AtomicBoolean(false);
 
     // 缓冲控制
-    private byte[] audioBuffer;
-    private int bufferSize = 8192;
-    private volatile boolean buffering = false;
+    private final byte[] audioBuffer;
+    private final int bufferSize;
 
+    /**
+     * 内部类：线程安全的Double值
+     */
+    private static class AtomicDouble {
+        private double value;
+
+        public AtomicDouble(double initialValue) {
+            this.value = initialValue;
+        }
+
+        public synchronized double get() {
+            return value;
+        }
+
+        public synchronized void set(double newValue) {
+            this.value = newValue;
+        }
+
+        public synchronized double getAndSet(double newValue) {
+            double oldValue = this.value;
+            this.value = newValue;
+            return oldValue;
+        }
+    }
+
+    /**
+     * 播放列表管理器 - 职责分离
+     */
+    private class PlaylistManager {
+        private final List<File> playlist = new CopyOnWriteArrayList<>();
+        private final AtomicInteger currentIndex = new AtomicInteger(-1);
+        @Getter
+        private volatile PlayMode playMode = PlayMode.NORMAL;
+        private List<Integer> shuffleIndices = Collections.emptyList();
+        private final AtomicBoolean shuffleGenerated = new AtomicBoolean(false);
+        private final Object shuffleLock = new Object();
+
+        public List<File> getPlaylist() {
+            return new ArrayList<>(playlist);
+        }
+
+        public int getCurrentIndex() {
+            return currentIndex.get();
+        }
+
+        public File getCurrentFile() {
+            int index = currentIndex.get();
+            if (index >= 0 && index < playlist.size()) {
+                return playlist.get(index);
+            }
+            return null;
+        }
+
+        public void setCurrentIndex(int index) {
+            if (index >= 0 && index < playlist.size()) {
+                currentIndex.set(index);
+            }
+        }
+
+        public void setPlayMode(PlayMode mode) {
+            this.playMode = mode;
+            if (mode == PlayMode.SHUFFLE) {
+                generateShuffleList();
+            }
+        }
+
+        public boolean addToPlaylist(File file) {
+            if (!isFormatSupported(file)) {
+                return false;
+            }
+            playlist.add(file);
+            if (playMode == PlayMode.SHUFFLE) {
+                generateShuffleList();
+            }
+            return true;
+        }
+
+        public boolean addToPlaylist(Collection<File> files) {
+            List<File> supportedFiles = files.stream()
+                    .filter(AdvancedStreamAudioPlayer.this::isFormatSupported)
+                    .toList();
+            boolean changed = playlist.addAll(supportedFiles);
+            if (changed && playMode == PlayMode.SHUFFLE) {
+                generateShuffleList();
+            }
+            return changed;
+        }
+
+        public boolean removeFromPlaylist(int index) {
+            if (index < 0 || index >= playlist.size()) {
+                return false;
+            }
+            playlist.remove(index);
+
+            // 调整当前索引
+            int current = currentIndex.get();
+            if (current == index) {
+                currentIndex.set(-1);
+            } else if (current > index) {
+                currentIndex.decrementAndGet();
+            }
+
+            if (playMode == PlayMode.SHUFFLE) {
+                generateShuffleList();
+            }
+            return true;
+        }
+
+        public void clearPlaylist() {
+            playlist.clear();
+            currentIndex.set(-1);
+            shuffleIndices = Collections.emptyList();
+            shuffleGenerated.set(false);
+        }
+
+        public int getNextIndex() {
+            if (playlist.isEmpty()) {
+                return -1;
+            }
+
+            switch (playMode) {
+                case REPEAT_ONE:
+                    return currentIndex.get();
+
+                case REPEAT_ALL:
+                    return (currentIndex.get() + 1) % playlist.size();
+
+                case SHUFFLE:
+                    if (!shuffleGenerated.get()) {
+                        generateShuffleList();
+                    }
+                    if (shuffleIndices.isEmpty()) {
+                        return -1;
+                    }
+                    int currentIdx = findCurrentShuffleIndex();
+                    int nextShuffleIdx = (currentIdx + 1) % shuffleIndices.size();
+                    return shuffleIndices.get(nextShuffleIdx);
+
+                case NORMAL:
+                default:
+                    int normalNext = currentIndex.get() + 1;
+                    return normalNext < playlist.size() ? normalNext : -1;
+            }
+        }
+
+        public int getPreviousIndex() {
+            if (playlist.isEmpty()) {
+                return -1;
+            }
+
+            switch (playMode) {
+                case REPEAT_ONE:
+                    return currentIndex.get();
+
+                case REPEAT_ALL:
+                    return (currentIndex.get() - 1 + playlist.size()) % playlist.size();
+
+                case SHUFFLE:
+                    if (!shuffleGenerated.get()) {
+                        generateShuffleList();
+                    }
+                    if (shuffleIndices.isEmpty()) {
+                        return -1;
+                    }
+                    int currentIdx = findCurrentShuffleIndex();
+                    int prevShuffleIdx = (currentIdx - 1 + shuffleIndices.size()) % shuffleIndices.size();
+                    return shuffleIndices.get(prevShuffleIdx);
+
+                case NORMAL:
+                default:
+                    int normalPrev = currentIndex.get() - 1;
+                    return Math.max(0, normalPrev);
+            }
+        }
+
+        public int size() {
+            return playlist.size();
+        }
+
+        public boolean isEmpty() {
+            return playlist.isEmpty();
+        }
+
+        private void generateShuffleList() {
+            synchronized (shuffleLock) {
+                shuffleIndices = new ArrayList<>(playlist.size());
+                for (int i = 0; i < playlist.size(); i++) {
+                    shuffleIndices.add(i);
+                }
+                Collections.shuffle(shuffleIndices);
+                shuffleGenerated.set(true);
+            }
+        }
+
+        private int findCurrentShuffleIndex() {
+            int current = currentIndex.get();
+            synchronized (shuffleLock) {
+                for (int i = 0; i < shuffleIndices.size(); i++) {
+                    if (shuffleIndices.get(i) == current) {
+                        return i;
+                    }
+                }
+            }
+            return 0;
+        }
+    }
+
+    /**
+     * 事件发布器 - 职责分离
+     */
+    private static class PlaybackEventPublisher {
+        private final List<PlaybackEventListener> listeners = new CopyOnWriteArrayList<>();
+        private final ExecutorService executor;
+        private final NCWLoggerFactory logger;
+
+        public PlaybackEventPublisher(ExecutorService executor, NCWLoggerFactory logger) {
+            this.logger = logger;
+            this.executor = executor;
+        }
+
+        public void addListener(PlaybackEventListener listener) {
+            listeners.add(listener);
+        }
+
+        public void removeListener(PlaybackEventListener listener) {
+            listeners.remove(listener);
+        }
+
+        public void removeAllListeners() {
+            listeners.clear();
+        }
+
+        public void firePlaybackStarted(File file) {
+            fireEvent(listener -> listener.onPlaybackStarted(file), "onPlaybackStarted");
+        }
+
+        public void firePlaybackPaused() {
+            fireEvent(PlaybackEventListener::onPlaybackPaused, "onPlaybackPaused");
+        }
+
+        public void firePlaybackResumed() {
+            fireEvent(PlaybackEventListener::onPlaybackResumed, "onPlaybackResumed");
+        }
+
+        public void firePlaybackStopped() {
+            fireEvent(PlaybackEventListener::onPlaybackStopped, "onPlaybackStopped");
+        }
+
+        public void firePlaybackFinished() {
+            fireEvent(PlaybackEventListener::onPlaybackFinished, "onPlaybackFinished");
+        }
+
+        public void fireTrackChanged(File previous, File next) {
+            fireEvent(listener -> listener.onTrackChanged(previous, next), "onTrackChanged");
+        }
+
+        public void fireError(Exception e) {
+            fireEvent(listener -> listener.onError(e), "onError");
+        }
+
+        public void firePositionChanged(double position) {
+            fireEvent(listener -> listener.onPositionChanged(position), "onPositionChanged");
+        }
+
+        public void fireVolumeChanged(double volume) {
+            fireEvent(listener -> listener.onVolumeChanged(volume), "onVolumeChanged");
+        }
+
+        public void firePlayModeChanged(PlayMode newMode) {
+            fireEvent(listener -> listener.onPlayModeChanged(newMode), "onPlayModeChanged");
+        }
+
+        public void firePlaylistUpdated() {
+            fireEvent(PlaybackEventListener::onPlaylistUpdated, "onPlaylistUpdated");
+        }
+
+        private void fireEvent(Consumer<PlaybackEventListener> action, String eventName) {
+            executor.submit(() -> {
+                for (PlaybackEventListener listener : listeners) {
+                    try {
+                        action.accept(listener);
+                    } catch (Exception e) {
+                        logger.error("Error in listener during {} event", eventName, e);
+                    }
+                }
+            });
+        }
+    }
+
+    /**
+     * 事件监听器接口
+     */
     public interface PlaybackEventListener {
         void onPlaybackStarted(File file);
         void onPlaybackPaused();
@@ -107,33 +419,38 @@ public class AdvancedStreamAudioPlayer {
         void onError(Exception e);
         void onPositionChanged(double position);
         void onVolumeChanged(double volume);
-        void onPlayModeChanged(int newMode);
+        void onPlayModeChanged(PlayMode newMode);
         void onPlaylistUpdated();
     }
 
-    public AdvancedStreamAudioPlayer() {
-        this.playlist = new ArrayList<>();
-        this.currentTrackIndex = new AtomicInteger(0);
-        this.playCount = new ConcurrentHashMap<>();
-        this.listeners = new CopyOnWriteArrayList<>();
-        this.soundControls = new HashMap<>();
-        this.audioBuffer = new byte[bufferSize];
-        this.shuffleIndices = new ArrayList<>();
-
-        // 初始化线程池
-        initExecutorService();
+    /**
+     * 默认构造函数
+     */
+    public AdvancedStreamAudioPlayer(NCWLoggerFactory logger) {
+        this(DEFAULT_BUFFER_SIZE, logger);
     }
 
     /**
-     * 初始化线程池
+     * 可配置缓冲大小的构造函数
      */
-    private void initExecutorService() {
-        executorService = Executors.newCachedThreadPool(r -> {
+    public AdvancedStreamAudioPlayer(int bufferSize, NCWLoggerFactory logger) {
+        this.bufferSize = bufferSize > 0 ? bufferSize : DEFAULT_BUFFER_SIZE;
+        this.logger = logger;
+        this.audioBuffer = new byte[this.bufferSize];
+        this.playlistManager = new PlaylistManager();
+
+
+        // 初始化线程池
+        this.executorService = Executors.newCachedThreadPool(r -> {
             Thread thread = new Thread(r);
             thread.setDaemon(true);
-            thread.setName("AudioPlayer-Worker-" + thread.getId());
+            thread.setName("AudioPlayer-Worker-" + thread.threadId());
+            thread.setUncaughtExceptionHandler((t, e) ->
+                    this.logger.error("Uncaught exception in AudioPlayer worker thread", t.getName(), (Exception) e));
             return thread;
         });
+
+        this.eventPublisher = new PlaybackEventPublisher(executorService, logger);
     }
 
     /**
@@ -141,36 +458,68 @@ public class AdvancedStreamAudioPlayer {
      */
     public void play(String filePath) throws UnsupportedAudioFileException,
             IOException, LineUnavailableException, InterruptedException {
+        validateFilePath(filePath);
         play(new File(filePath));
     }
 
+    /**
+     * 播放指定文件
+     */
     public void play(File file) throws UnsupportedAudioFileException,
             IOException, LineUnavailableException, InterruptedException {
-        if (!isFormatSupported(file)) {
-            throw new UnsupportedAudioFileException("不支持的音频格式: " + getFileExtension(file));
-        }
+        validateFile(file);
 
+        // 停止当前播放
         stop();
-        audioFile = file;
+
+        // 更新当前文件
+        currentAudioFile = file;
 
         // 更新播放统计
-        playCount.merge(file.getName(), 1, Integer::sum);
-
-        // 通知监听器
-        notifyPlaybackStarted(file);
+        playCount.computeIfAbsent(file.getName(), k -> new AtomicInteger(0))
+                .incrementAndGet();
 
         // 准备音频流
+        prepareAudioStream(file);
+
+        // 打开音频设备
+        openAudioDevice();
+
+        // 初始化控制功能
+        initAudioControls();
+
+        // 设置播放状态
+        playing.set(true);
+        paused.set(false);
+        playbackState = PlaybackState.PLAYING;
+        startTime = System.currentTimeMillis();
+
+        // 通知监听器
+        eventPublisher.firePlaybackStarted(file);
+
+        // 启动播放线程
+        startPlaybackThread();
+    }
+
+    /**
+     * 准备音频流
+     */
+    private void prepareAudioStream(File file) throws UnsupportedAudioFileException, IOException {
         synchronized (audioStreamLock) {
+            // 关闭现有流
+            closeAudioStream();
+
+            // 创建新流
             audioStream = AudioSystem.getAudioInputStream(file);
             originalFormat = audioStream.getFormat();
 
             // 计算音频信息
-            totalFrames = audioStream.getFrameLength();
+            totalFrames.set(audioStream.getFrameLength());
             frameSize = originalFormat.getFrameSize();
-            currentFrame = 0;
+            currentFrame.set(0);
 
             // 格式转换（如果需要）
-            if (!isFormatSupported(originalFormat)) {
+            if (isFormatSupported(originalFormat)) {
                 AudioFormat targetFormat = new AudioFormat(
                         AudioFormat.Encoding.PCM_SIGNED,
                         originalFormat.getSampleRate(),
@@ -182,27 +531,19 @@ public class AdvancedStreamAudioPlayer {
                 );
                 audioStream = AudioSystem.getAudioInputStream(targetFormat, audioStream);
                 frameSize = targetFormat.getFrameSize();
-                totalFrames = audioStream.getFrameLength();
+                totalFrames.set(audioStream.getFrameLength());
             }
         }
+    }
 
-        // 打开音频设备
+    /**
+     * 打开音频设备
+     */
+    private void openAudioDevice() throws LineUnavailableException {
         AudioFormat format = audioStream.getFormat();
         DataLine.Info info = new DataLine.Info(SourceDataLine.class, format);
         sourceDataLine = (SourceDataLine) AudioSystem.getLine(info);
         sourceDataLine.open(format);
-
-        // 初始化控制功能
-        initAudioControls();
-
-        // 设置播放状态
-        playing = true;
-        paused = false;
-        playbackState = STATE_PLAYING;
-        startTime = System.currentTimeMillis();
-
-        // 启动播放线程
-        startPlaybackThread();
     }
 
     /**
@@ -212,8 +553,8 @@ public class AdvancedStreamAudioPlayer {
         // 清理之前的线程
         cleanupPlaybackThread();
 
-        playbackThread = new Thread(this::streamPlayback);
-        playbackThread.setName("AudioPlayer-Playback-" + System.currentTimeMillis());
+        playbackThread = new Thread(this::streamPlayback,
+                "AudioPlayer-Playback-" + System.currentTimeMillis());
         playbackThread.setDaemon(true);
         playbackThread.setPriority(Thread.MAX_PRIORITY);
         playbackThread.start();
@@ -224,24 +565,19 @@ public class AdvancedStreamAudioPlayer {
      */
     private void cleanupPlaybackThread() {
         if (playbackThread != null && playbackThread.isAlive()) {
+            playing.set(false);
+            paused.set(false);
+
+            // 中断线程
+            playbackThread.interrupt();
+
+            // 等待线程结束
             try {
-                playing = false;
-                paused = false;
-
-                // 中断线程
-                playbackThread.interrupt();
-
-                // 等待线程结束
-                try {
-                    playbackThread.join(1000);
-                } catch (InterruptedException e) {
-                    Thread.currentThread().interrupt();
-                }
-
-                // 确保线程被清理
+                playbackThread.join(1000);
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+            } finally {
                 playbackThread = null;
-            } catch (Exception e) {
-                notifyError(e);
             }
         }
     }
@@ -251,26 +587,34 @@ public class AdvancedStreamAudioPlayer {
      */
     private void initAudioControls() {
         // 音量控制
+        initVolumeControl();
+
+        // 音效控制
+        initSoundControls();
+    }
+
+    /**
+     * 初始化音量控制
+     */
+    private void initVolumeControl() {
         try {
             volumeControl = (FloatControl) sourceDataLine.getControl(FloatControl.Type.MASTER_GAIN);
             volumeSupported = true;
             minVolume = volumeControl.getMinimum();
             maxVolume = volumeControl.getMaximum();
-            setVolume(currentVolume);
+            setVolume(currentVolume.get());
         } catch (IllegalArgumentException e) {
             try {
                 volumeControl = (FloatControl) sourceDataLine.getControl(FloatControl.Type.VOLUME);
                 volumeSupported = true;
                 minVolume = volumeControl.getMinimum();
                 maxVolume = volumeControl.getMaximum();
-                setVolume(currentVolume);
+                setVolume(currentVolume.get());
             } catch (IllegalArgumentException ex) {
                 volumeSupported = false;
+                throw ex;
             }
         }
-
-        // 音效控制
-        initSoundControls();
     }
 
     /**
@@ -279,12 +623,10 @@ public class AdvancedStreamAudioPlayer {
     private void initSoundControls() {
         soundControls.clear();
 
-        // 尝试获取各种音效控制
         if (sourceDataLine != null) {
             Control[] controls = sourceDataLine.getControls();
             for (Control control : controls) {
-                if (control instanceof FloatControl) {
-                    FloatControl floatControl = (FloatControl) control;
+                if (control instanceof FloatControl floatControl) {
                     soundControls.put(floatControl.getType().toString(), floatControl);
                 }
             }
@@ -293,146 +635,63 @@ public class AdvancedStreamAudioPlayer {
         equalizerSupported = !soundControls.isEmpty();
     }
 
-    /**
-     * 设置音效参数
-     */
-    public boolean setSoundEffect(String effectType, float value) {
-        FloatControl control = soundControls.get(effectType.toUpperCase());
-        if (control != null) {
-            try {
-                control.setValue(value);
-                return true;
-            } catch (IllegalArgumentException e) {
-                return false;
-            }
-        }
-        return false;
-    }
+    // ==================== 播放控制方法 ====================
 
     /**
-     * 设置播放模式
+     * 暂停播放
      */
-    public void setPlayMode(int mode) {
-        if (mode < 0 || mode > 3) {
-            throw new IllegalArgumentException("无效的播放模式");
-        }
-
-        this.playMode = mode;
-
-        // 如果是随机播放模式，重新生成随机列表
-        if (mode == PLAY_MODE_SHUFFLE) {
-            generateShuffleList();
-        }
-
-        notifyPlayModeChanged(mode);
-    }
-
-    /**
-     * 生成随机播放列表
-     */
-    private void generateShuffleList() {
-        shuffleIndices.clear();
-        for (int i = 0; i < playlist.size(); i++) {
-            shuffleIndices.add(i);
-        }
-        Collections.shuffle(shuffleIndices);
-        isShuffleGenerated.set(true);
-    }
-
-    /**
-     * 获取当前位置信息
-     *
-     * @return 格式化的位置信息字符串
-     */
-    public String getPositionInfo() {
-        if (!positionSupported) {
-            return "位置控制不支持";
-        }
-
-        double currentTime = getCurrentTime();
-        double totalTime = getTotalTime();
-        double progress = getPlaybackProgress() * 100;
-
-        return String.format("当前位置: %d/%d 帧 (%.1f/%.1f 秒, %.1f%%)",
-                currentFrame, totalFrames, currentTime, totalTime, progress);
-    }
-
-    /**
-     * 增加音量
-     *
-     * @param increment 增加的量，范围0.0-1.0
-     * @return 是否成功
-     */
-    public boolean increaseVolume(double increment) {
-        double newVolume = Math.min(1.0, currentVolume + increment);
-        return setVolume(newVolume);
-    }
-
-    /**
-     * 减小音量
-     *
-     * @param decrement 减小的量，范围0.0-1.0
-     * @return 是否成功
-     */
-    public boolean decreaseVolume(double decrement) {
-        double newVolume = Math.max(0.0, currentVolume - decrement);
-        return setVolume(newVolume);
-    }
-
-    /**
-     * 获取支持的音效类型
-     */
-    public List<String> getSupportedSoundEffects() {
-        return new ArrayList<>(soundControls.keySet());
-    }
-
-    // 播放控制方法
     public void pause() {
-        synchronized (playLock) {
-            if (sourceDataLine != null && sourceDataLine.isRunning()) {
+        synchronized (playControlLock) {
+            if (sourceDataLine != null && sourceDataLine.isRunning() && playing.get()) {
                 sourceDataLine.stop();
-                paused = true;
-                playbackState = STATE_PAUSED;
-                notifyPlaybackPaused();
+                paused.set(true);
+                playbackState = PlaybackState.PAUSED;
+                eventPublisher.firePlaybackPaused();
             }
         }
     }
 
+    /**
+     * 恢复播放
+     */
     public void resume() {
-        synchronized (playLock) {
-            if (sourceDataLine != null && !sourceDataLine.isRunning() && paused) {
+        synchronized (playControlLock) {
+            if (sourceDataLine != null && !sourceDataLine.isRunning() &&
+                    paused.get() && playing.get()) {
                 sourceDataLine.start();
-                paused = false;
-                playbackState = STATE_PLAYING;
-                playLock.notifyAll();  // 唤醒等待的线程
-                notifyPlaybackResumed();
+                paused.set(false);
+                playbackState = PlaybackState.PLAYING;
+                playControlLock.notifyAll();
+                eventPublisher.firePlaybackResumed();
             }
         }
     }
 
+    /**
+     * 停止播放
+     */
     public void stop() {
-        playing = false;
-        paused = false;
-        buffering = false;
+        playing.set(false);
+        paused.set(false);
 
         // 唤醒可能等待的线程
-        synchronized (playLock) {
-            playLock.notifyAll();
+        synchronized (playControlLock) {
+            playControlLock.notifyAll();
         }
 
         cleanupPlaybackThread();
-
         closeResources();
-        playbackState = STATE_STOPPED;
-        currentFrame = 0;
+
+        playbackState = PlaybackState.STOPPED;
+        currentFrame.set(0);
 
         // 更新总播放时间
         if (startTime > 0) {
-            totalPlayTime += System.currentTimeMillis() - startTime;
+            totalPlayTime.addAndGet(System.currentTimeMillis() - startTime);
             startTime = 0;
         }
 
-        notifyPlaybackStopped();
+        eventPublisher.firePlaybackStopped();
     }
 
     /**
@@ -446,7 +705,10 @@ public class AdvancedStreamAudioPlayer {
             executorService.shutdown();
             try {
                 if (!executorService.awaitTermination(5, TimeUnit.SECONDS)) {
-                    executorService.shutdownNow();
+                    List<Runnable> remainingTasks = executorService.shutdownNow();
+                    if (!remainingTasks.isEmpty()) {
+                        this.logger.warn("Forcefully terminated {" + remainingTasks.size() + "} remaining tasks", "shutdown");
+                    }
                 }
             } catch (InterruptedException e) {
                 executorService.shutdownNow();
@@ -455,33 +717,97 @@ public class AdvancedStreamAudioPlayer {
         }
     }
 
-    // 位置控制方法
-    public boolean seekToTime(double seconds) {
-        if (!positionSupported || audioStream == null) return false;
+    // ==================== 音量控制 ====================
 
+    /**
+     * 设置音量
+     */
+    public void setVolume(double volume) {
+        if (!volumeSupported || volumeControl == null) {
+            return;
+        }
+
+        double newVolume = Math.max(0.0, Math.min(1.0, volume));
+        double oldVolume = currentVolume.getAndSet(newVolume);
+
+        try {
+            if (volumeControl.getType() == FloatControl.Type.MASTER_GAIN) {
+                float dB = (float) (Math.log10(newVolume == 0 ? 0.0001 : newVolume) * 20.0);
+                dB = Math.max(minVolume, Math.min(maxVolume, dB));
+                volumeControl.setValue(dB);
+            } else {
+                float linearVolume = (float) (minVolume + (maxVolume - minVolume) * newVolume);
+                volumeControl.setValue(linearVolume);
+            }
+
+            if (Math.abs(newVolume - oldVolume) > 0.01) {
+                eventPublisher.fireVolumeChanged(newVolume);
+            }
+        } catch (IllegalArgumentException e) {
+            currentVolume.set(oldVolume); // 恢复原值
+            throw e;
+        }
+    }
+
+    /**
+     * 增加音量
+     */
+    public void increaseVolume(double increment) {
+        if (increment < 0) {
+            throw new IllegalArgumentException("音量增量不能为负数");
+        }
+        double newVolume = Math.min(1.0, currentVolume.get() + increment);
+        setVolume(newVolume);
+    }
+
+    /**
+     * 减小音量
+     */
+    public void decreaseVolume(double decrement) {
+        if (decrement < 0) {
+            throw new IllegalArgumentException("音量减量不能为负数");
+        }
+        double newVolume = Math.max(0.0, currentVolume.get() - decrement);
+        setVolume(newVolume);
+    }
+
+    // ==================== 位置控制 ====================
+
+    /**
+     * 跳转到指定时间（秒）
+     */
+    public boolean seekToTime(double seconds) {
+        if (originalFormat == null || seconds < 0) {
+            return false;
+        }
         float frameRate = originalFormat.getFrameRate();
         long targetFrame = (long) (seconds * frameRate);
         return seekToFrame(targetFrame);
     }
 
+    /**
+     * 跳转到指定帧
+     */
     public boolean seekToFrame(long frame) {
-        if (!positionSupported || audioFile == null || frame < 0 || frame >= totalFrames) {
+        if (currentAudioFile == null || originalFormat == null ||
+                frame < 0 || frame >= totalFrames.get()) {
             return false;
         }
 
-        boolean wasPlaying = (playbackState == STATE_PLAYING);
+        boolean wasPlaying = (playbackState == PlaybackState.PLAYING);
 
-        if (wasPlaying) pause();
+        if (wasPlaying) {
+            pause();
+        }
 
         try {
             synchronized (audioStreamLock) {
-                if (audioStream != null) {
-                    audioStream.close();
-                }
+                closeAudioStream();
 
-                audioStream = AudioSystem.getAudioInputStream(audioFile);
+                // 重新打开音频流
+                audioStream = AudioSystem.getAudioInputStream(currentAudioFile);
 
-                if (!isFormatSupported(originalFormat)) {
+                if (isFormatSupported(originalFormat)) {
                     AudioFormat targetFormat = new AudioFormat(
                             AudioFormat.Encoding.PCM_SIGNED,
                             originalFormat.getSampleRate(),
@@ -496,368 +822,152 @@ public class AdvancedStreamAudioPlayer {
 
                 long bytesToSkip = frame * frameSize;
                 long skipped = audioStream.skip(bytesToSkip);
-                currentFrame = frame;
+                currentFrame.set(frame);
             }
 
-            if (wasPlaying) resume();
+            if (wasPlaying) {
+                resume();
+            }
 
-            notifyPositionChanged(getPlaybackProgress());
+            eventPublisher.firePositionChanged(getPlaybackProgress());
             return true;
         } catch (Exception e) {
-            notifyError(e);
+            this.logger.error("Failed to seek to frame: {}", String.valueOf(frame), e);
+            eventPublisher.fireError(e);
             return false;
         }
     }
 
-    // 播放列表管理功能
+    // ==================== 播放列表管理 ====================
+
     public void addToPlaylist(File file) {
-        if (isFormatSupported(file)) {
-            playlist.add(file);
-
-            // 重新生成随机列表
-            if (playMode == PLAY_MODE_SHUFFLE) {
-                generateShuffleList();
-            }
-
-            notifyPlaylistUpdated();
+        boolean added = playlistManager.addToPlaylist(file);
+        if (added) {
+            eventPublisher.firePlaylistUpdated();
         }
     }
 
     public void addToPlaylist(List<File> files) {
-        files.stream().filter(this::isFormatSupported).forEach(playlist::add);
-
-        // 重新生成随机列表
-        if (playMode == PLAY_MODE_SHUFFLE) {
-            generateShuffleList();
+        boolean added = playlistManager.addToPlaylist(files);
+        if (added) {
+            eventPublisher.firePlaylistUpdated();
         }
-
-        notifyPlaylistUpdated();
     }
 
     public void removeFromPlaylist(int index) {
-        if (index >= 0 && index < playlist.size()) {
-            playlist.remove(index);
-
-            // 调整当前索引
-            if (currentTrackIndex.get() >= index && currentTrackIndex.get() > 0) {
-                currentTrackIndex.decrementAndGet();
-            }
-
-            // 重新生成随机列表
-            if (playMode == PLAY_MODE_SHUFFLE) {
-                generateShuffleList();
-            }
-
-            notifyPlaylistUpdated();
+        boolean removed = playlistManager.removeFromPlaylist(index);
+        if (removed) {
+            eventPublisher.firePlaylistUpdated();
         }
     }
 
     public void clearPlaylist() {
-        playlist.clear();
-        shuffleIndices.clear();
-        currentTrackIndex.set(0);
-        isShuffleGenerated.set(false);
-        notifyPlaylistUpdated();
+        playlistManager.clearPlaylist();
+        eventPublisher.firePlaylistUpdated();
+    }
+
+    public List<File> getPlaylist() {
+        return playlistManager.getPlaylist();
+    }
+
+    public File getCurrentFile() {
+        return playlistManager.getCurrentFile();
+    }
+
+    public void setPlayMode(PlayMode mode) {
+        if (mode == null) {
+            throw new IllegalArgumentException("播放模式不能为null");
+        }
+        PlayMode oldMode = playlistManager.getPlayMode();
+        playlistManager.setPlayMode(mode);
+        if (oldMode != mode) {
+            eventPublisher.firePlayModeChanged(mode);
+        }
+    }
+
+    public PlayMode getPlayMode() {
+        return playlistManager.getPlayMode();
     }
 
     /**
-     * 播放下一首（根据播放模式）
+     * 播放下一首
      */
-    public void nextTrack() throws Exception {
-        if (playlist.isEmpty()) {
+    public void nextTrack() {
+        int nextIndex = playlistManager.getNextIndex();
+        if (nextIndex == -1) {
             stop();
+            eventPublisher.firePlaybackFinished();
             return;
         }
 
-        switch (playMode) {
-            case PLAY_MODE_REPEAT_ONE:
-                // 单曲循环：重新播放当前曲目
-                File currentFile = getCurrentFile();
-                if (currentFile != null) {
-                    play(currentFile);
-                    notifyTrackChanged(currentFile, currentFile);
-                }
-                break;
+        try {
+            File current = getCurrentFile();
+            playlistManager.setCurrentIndex(nextIndex);
+            File next = playlistManager.getPlaylist().get(nextIndex);
 
-            case PLAY_MODE_REPEAT_ALL:
-                // 顺序循环
-                int nextIndex = (currentTrackIndex.get() + 1) % playlist.size();
-                File current = getCurrentFile();
-                File next = playlist.get(nextIndex);
-                currentTrackIndex.set(nextIndex);
-                play(next);
-                if (current != null) {
-                    notifyTrackChanged(current, next);
-                }
-                break;
-
-            case PLAY_MODE_SHUFFLE:
-                // 无序循环
-                if (!isShuffleGenerated.get() || shuffleIndices.isEmpty()) {
-                    generateShuffleList();
-                }
-
-                int currentShuffleIndex = findCurrentShuffleIndex();
-                int nextShuffleIndex = (currentShuffleIndex + 1) % shuffleIndices.size();
-                int nextTrackIndex = shuffleIndices.get(nextShuffleIndex);
-
-                File shuffleCurrent = playlist.get(shuffleIndices.get(currentShuffleIndex));
-                File shuffleNext = playlist.get(nextTrackIndex);
-                currentTrackIndex.set(nextTrackIndex);
-                play(shuffleNext);
-                notifyTrackChanged(shuffleCurrent, shuffleNext);
-                break;
-
-            case PLAY_MODE_NORMAL:
-            default:
-                // 顺序播放
-                int normalNextIndex = currentTrackIndex.get() + 1;
-                if (normalNextIndex >= playlist.size()) {
-                    stop();
-                    notifyPlaybackFinished();
-                } else {
-                    File normalCurrent = getCurrentFile();
-                    File normalNext = playlist.get(normalNextIndex);
-                    currentTrackIndex.set(normalNextIndex);
-                    play(normalNext);
-                    if (normalCurrent != null) {
-                        notifyTrackChanged(normalCurrent, normalNext);
-                    }
-                }
-                break;
-        }
-    }
-
-    /**
-     * 播放上一首（根据播放模式）
-     */
-    public void previousTrack() throws Exception {
-        if (playlist.isEmpty()) return;
-
-        switch (playMode) {
-            case PLAY_MODE_REPEAT_ONE:
-                // 单曲循环：重新播放当前曲目
-                File currentFile = getCurrentFile();
-                if (currentFile != null) {
-                    play(currentFile);
-                    notifyTrackChanged(currentFile, currentFile);
-                }
-                break;
-
-            case PLAY_MODE_REPEAT_ALL:
-                // 顺序循环
-                int prevIndex = (currentTrackIndex.get() - 1 + playlist.size()) % playlist.size();
-                File current = getCurrentFile();
-                File prev = playlist.get(prevIndex);
-                currentTrackIndex.set(prevIndex);
-                play(prev);
-                if (current != null) {
-                    notifyTrackChanged(current, prev);
-                }
-                break;
-
-            case PLAY_MODE_SHUFFLE:
-                // 无序循环
-                if (!isShuffleGenerated.get() || shuffleIndices.isEmpty()) {
-                    generateShuffleList();
-                }
-
-                int currentShuffleIndex = findCurrentShuffleIndex();
-                int prevShuffleIndex = (currentShuffleIndex - 1 + shuffleIndices.size()) % shuffleIndices.size();
-                int prevTrackIndex = shuffleIndices.get(prevShuffleIndex);
-
-                File shuffleCurrent = playlist.get(shuffleIndices.get(currentShuffleIndex));
-                File shufflePrev = playlist.get(prevTrackIndex);
-                currentTrackIndex.set(prevTrackIndex);
-                play(shufflePrev);
-                notifyTrackChanged(shuffleCurrent, shufflePrev);
-                break;
-
-            case PLAY_MODE_NORMAL:
-            default:
-                // 顺序播放
-                int normalPrevIndex = currentTrackIndex.get() - 1;
-                if (normalPrevIndex < 0) {
-                    // 如果是第一首，回到开头
-                    normalPrevIndex = 0;
-                }
-                File normalCurrent = getCurrentFile();
-                File normalPrev = playlist.get(normalPrevIndex);
-                currentTrackIndex.set(normalPrevIndex);
-                play(normalPrev);
-                if (normalCurrent != null) {
-                    notifyTrackChanged(normalCurrent, normalPrev);
-                }
-                break;
-        }
-    }
-
-    /**
-     * 查找当前曲目在随机列表中的位置
-     */
-    private int findCurrentShuffleIndex() {
-        int currentIndex = currentTrackIndex.get();
-        for (int i = 0; i < shuffleIndices.size(); i++) {
-            if (shuffleIndices.get(i) == currentIndex) {
-                return i;
+            play(next);
+            if (current != null) {
+                eventPublisher.fireTrackChanged(current, next);
             }
+        } catch (Exception e) {
+            this.logger.error("Failed to play next track", "nextTrack", e);
+            eventPublisher.fireError(e);
         }
-        return 0;
     }
 
-    // 事件监听器管理
+    /**
+     * 播放上一首
+     */
+    public void previousTrack() {
+        int prevIndex = playlistManager.getPreviousIndex();
+        if (prevIndex == -1) {
+            return;
+        }
+
+        try {
+            File current = getCurrentFile();
+            playlistManager.setCurrentIndex(prevIndex);
+            File previous = playlistManager.getPlaylist().get(prevIndex);
+
+            play(previous);
+            if (current != null) {
+                eventPublisher.fireTrackChanged(current, previous);
+            }
+        } catch (Exception e) {
+            this.logger.error("Failed to play previous track", "previousTrack", e);
+            eventPublisher.fireError(e);
+        }
+    }
+
+    // ==================== 事件监听器管理 ====================
+
     public void addPlaybackEventListener(PlaybackEventListener listener) {
-        listeners.add(listener);
+        eventPublisher.addListener(listener);
     }
 
     public void removePlaybackEventListener(PlaybackEventListener listener) {
-        listeners.remove(listener);
+        eventPublisher.removeListener(listener);
     }
 
-    private void notifyPlaybackStarted(File file) {
-        executorService.submit(() -> {
-            for (PlaybackEventListener listener : listeners) {
-                try {
-                    listener.onPlaybackStarted(file);
-                } catch (Exception e) {
-                    // 防止监听器异常影响播放
-                    e.printStackTrace();
-                }
-            }
-        });
+    public void removeAllPlaybackEventListeners() {
+        eventPublisher.removeAllListeners();
     }
 
-    private void notifyPlaybackPaused() {
-        executorService.submit(() -> {
-            for (PlaybackEventListener listener : listeners) {
-                try {
-                    listener.onPlaybackPaused();
-                } catch (Exception e) {
-                    e.printStackTrace();
-                }
-            }
-        });
-    }
+    // ==================== 核心播放逻辑 ====================
 
-    private void notifyPlaybackResumed() {
-        executorService.submit(() -> {
-            for (PlaybackEventListener listener : listeners) {
-                try {
-                    listener.onPlaybackResumed();
-                } catch (Exception e) {
-                    e.printStackTrace();
-                }
-            }
-        });
-    }
-
-    private void notifyPlaybackStopped() {
-        executorService.submit(() -> {
-            for (PlaybackEventListener listener : listeners) {
-                try {
-                    listener.onPlaybackStopped();
-                } catch (Exception e) {
-                    e.printStackTrace();
-                }
-            }
-        });
-    }
-
-    private void notifyPlaybackFinished() {
-        executorService.submit(() -> {
-            for (PlaybackEventListener listener : listeners) {
-                try {
-                    listener.onPlaybackFinished();
-                } catch (Exception e) {
-                    e.printStackTrace();
-                }
-            }
-        });
-    }
-
-    private void notifyTrackChanged(File previous, File next) {
-        executorService.submit(() -> {
-            for (PlaybackEventListener listener : listeners) {
-                try {
-                    listener.onTrackChanged(previous, next);
-                } catch (Exception e) {
-                    e.printStackTrace();
-                }
-            }
-        });
-    }
-
-    private void notifyError(Exception e) {
-        executorService.submit(() -> {
-            for (PlaybackEventListener listener : listeners) {
-                try {
-                    listener.onError(e);
-                } catch (Exception ex) {
-                    ex.printStackTrace();
-                }
-            }
-        });
-    }
-
-    private void notifyPositionChanged(double position) {
-        executorService.submit(() -> {
-            for (PlaybackEventListener listener : listeners) {
-                try {
-                    listener.onPositionChanged(position);
-                } catch (Exception e) {
-                    e.printStackTrace();
-                }
-            }
-        });
-    }
-
-    private void notifyVolumeChanged(double volume) {
-        executorService.submit(() -> {
-            for (PlaybackEventListener listener : listeners) {
-                try {
-                    listener.onVolumeChanged(volume);
-                } catch (Exception e) {
-                    e.printStackTrace();
-                }
-            }
-        });
-    }
-
-    private void notifyPlayModeChanged(int newMode) {
-        executorService.submit(() -> {
-            for (PlaybackEventListener listener : listeners) {
-                try {
-                    listener.onPlayModeChanged(newMode);
-                } catch (Exception e) {
-                    e.printStackTrace();
-                }
-            }
-        });
-    }
-
-    private void notifyPlaylistUpdated() {
-        executorService.submit(() -> {
-            for (PlaybackEventListener listener : listeners) {
-                try {
-                    listener.onPlaylistUpdated();
-                } catch (Exception e) {
-                    e.printStackTrace();
-                }
-            }
-        });
-    }
-
-    // 流式播放核心逻辑
+    /**
+     * 流式播放核心逻辑
+     */
     private void streamPlayback() {
         try {
             sourceDataLine.start();
             int bytesRead;
 
-            while (playing && !Thread.currentThread().isInterrupted()) {
-                synchronized (playLock) {
-                    while (paused && playing) {
+            while (playing.get() && !Thread.currentThread().isInterrupted()) {
+                synchronized (playControlLock) {
+                    while (paused.get() && playing.get()) {
                         try {
-                            playLock.wait();
+                            playControlLock.wait();
                         } catch (InterruptedException e) {
                             Thread.currentThread().interrupt();
                             break;
@@ -865,7 +975,7 @@ public class AdvancedStreamAudioPlayer {
                     }
                 }
 
-                if (Thread.currentThread().isInterrupted() || !playing) {
+                if (Thread.currentThread().isInterrupted() || !playing.get()) {
                     break;
                 }
 
@@ -887,15 +997,19 @@ public class AdvancedStreamAudioPlayer {
 
                 if (bytesRead > 0 && sourceDataLine != null) {
                     // 写入音频设备
-                    sourceDataLine.write(audioBuffer, 0, bytesRead);
+                    int bytesWritten = sourceDataLine.write(audioBuffer, 0, bytesRead);
+
+                    if (bytesWritten != bytesRead) {
+                        this.logger.warn("Bytes written (" + bytesWritten + ") doesn't match bytes read (" + bytesRead + ")", "streamPlayback");
+                    }
 
                     // 更新当前位置
                     int framesRead = bytesRead / frameSize;
-                    currentFrame += framesRead;
+                    long newFrame = currentFrame.addAndGet(framesRead);
 
-                    // 通知位置变化
-                    if (currentFrame % 1000 == 0) { // 减少通知频率
-                        notifyPositionChanged(getPlaybackProgress());
+                    // 通知位置变化（降低频率）
+                    if (newFrame % POSITION_UPDATE_THRESHOLD == 0) {
+                        eventPublisher.firePositionChanged(getPlaybackProgress());
                     }
                 }
             }
@@ -905,48 +1019,73 @@ public class AdvancedStreamAudioPlayer {
             }
         } catch (IOException e) {
             if (!Thread.currentThread().isInterrupted()) {
-                notifyError(e);
+                this.logger.error("I/O error during playback", "streamPlayback", e);
+                eventPublisher.fireError(e);
             }
         } finally {
-            if (playing) {
-                closeResources();
-            }
-            playbackState = STATE_STOPPED;
+            closeResources();
+            playbackState = PlaybackState.STOPPED;
         }
     }
 
+    /**
+     * 处理播放完成
+     */
     private void handlePlaybackCompletion() {
-        notifyPlaybackFinished();
+        eventPublisher.firePlaybackFinished();
 
-        try {
-            // 根据播放模式处理下一首
-            if (playlist.isEmpty()) {
-                // 如果播放列表为空，停止播放
-                stop();
-            } else {
-                // 使用线程池处理下一首播放
-                executorService.submit(() -> {
-                    try {
-                        nextTrack();
-                    } catch (Exception e) {
-                        notifyError(e);
-                    }
-                });
+        executorService.submit(() -> {
+            try {
+                if (playlistManager.isEmpty()) {
+                    stop();
+                } else {
+                    nextTrack();
+                }
+            } catch (Exception e) {
+                this.logger.error("Error handling playback completion", "handlePlaybackCompletion", e);
+                eventPublisher.fireError(e);
             }
-        } catch (Exception e) {
-            notifyError(e);
+        });
+    }
+
+    // ==================== 工具方法 ====================
+
+    /**
+     * 验证文件路径
+     */
+    private void validateFilePath(String filePath) {
+        if (filePath == null || filePath.trim().isEmpty()) {
+            throw new IllegalArgumentException("文件路径不能为空");
         }
     }
 
-    // 工具方法
+    /**
+     * 验证文件
+     */
+    private void validateFile(File file) {
+        if (file == null) {
+            throw new IllegalArgumentException("文件不能为null");
+        }
+        if (!file.exists()) {
+            throw new IllegalArgumentException("文件不存在: " + file.getAbsolutePath());
+        }
+        if (!file.canRead()) {
+            throw new IllegalArgumentException("文件不可读: " + file.getAbsolutePath());
+        }
+        if (!isFormatSupported(file)) {
+            throw new IllegalArgumentException("不支持的音频格式: " + getFileExtension(file));
+        }
+    }
+
     private boolean isFormatSupported(File file) {
         String extension = getFileExtension(file).toLowerCase();
         return SUPPORTED_FORMATS.contains(extension);
     }
 
     private boolean isFormatSupported(AudioFormat format) {
+        if (format == null) return true;
         DataLine.Info info = new DataLine.Info(SourceDataLine.class, format);
-        return AudioSystem.isLineSupported(info);
+        return !AudioSystem.isLineSupported(info);
     }
 
     private String getFileExtension(File file) {
@@ -955,237 +1094,257 @@ public class AdvancedStreamAudioPlayer {
         return lastDot > 0 ? name.substring(lastDot + 1) : "";
     }
 
-    private void closeResources() {
+    /**
+     * 关闭音频资源
+     */
+    private void closeAudioStream() {
         try {
-            synchronized (audioStreamLock) {
-                if (audioStream != null) {
-                    audioStream.close();
-                    audioStream = null;
-                }
-            }
-            if (sourceDataLine != null) {
-                sourceDataLine.stop();
-                sourceDataLine.close();
-                sourceDataLine = null;
+            if (audioStream != null) {
+                audioStream.close();
+                audioStream = null;
             }
         } catch (IOException e) {
-            notifyError(e);
+            this.logger.error("Error closing audio stream", "closeAudioStream", e);
         }
     }
 
-    // 新增功能：音频信息获取
+    /**
+     * 关闭所有资源
+     */
+    private void closeResources() {
+        synchronized (audioStreamLock) {
+            closeAudioStream();
+        }
+
+        if (sourceDataLine != null) {
+            try {
+                if (sourceDataLine.isRunning()) {
+                    sourceDataLine.stop();
+                }
+                sourceDataLine.close();
+            } catch (Exception e) {
+                this.logger.error("Error closing source data line", "closeResources", e);
+            } finally {
+                sourceDataLine = null;
+            }
+        }
+    }
+
+    // ==================== 查询方法 ====================
+
+    public double getCurrentTime() {
+        if (originalFormat == null) return 0;
+        return currentFrame.get() / originalFormat.getFrameRate();
+    }
+
+    public double getTotalTime() {
+        if (originalFormat == null) return 0;
+        return totalFrames.get() / originalFormat.getFrameRate();
+    }
+
+    public double getPlaybackProgress() {
+        long total = totalFrames.get();
+        if (total <= 0) return 0;
+        return (double) currentFrame.get() / total;
+    }
+
+    public String getFormattedCurrentTime() {
+        return formatTime(getCurrentTime());
+    }
+
+    public String getFormattedTotalTime() {
+        return formatTime(getTotalTime());
+    }
+
+    private String formatTime(double seconds) {
+        int totalSeconds = (int) seconds;
+        int minutes = totalSeconds / 60;
+        int remainingSeconds = totalSeconds % 60;
+        return String.format("%02d:%02d", minutes, remainingSeconds);
+    }
+
+    public String getPositionInfo() {
+        if (originalFormat == null) {
+            return "未加载音频文件";
+        }
+
+        double currentTime = getCurrentTime();
+        double totalTime = getTotalTime();
+        double progress = getPlaybackProgress() * 100;
+
+        return String.format("%s / %s (%.1f%%)",
+                getFormattedCurrentTime(),
+                getFormattedTotalTime(),
+                progress);
+    }
+
     public Map<String, Object> getAudioMetadata() {
         Map<String, Object> metadata = new HashMap<>();
-        if (audioFile != null) {
-            metadata.put("文件名", audioFile.getName());
-            metadata.put("文件大小", audioFile.length() + " bytes");
-            metadata.put("路径", audioFile.getAbsolutePath());
+        if (currentAudioFile != null) {
+            metadata.put("filename", currentAudioFile.getName());
+            metadata.put("size", currentAudioFile.length());
+            metadata.put("path", currentAudioFile.getAbsolutePath());
         }
         if (originalFormat != null) {
-            metadata.put("采样率", originalFormat.getSampleRate() + " Hz");
-            metadata.put("声道数", originalFormat.getChannels());
-            metadata.put("编码", originalFormat.getEncoding());
-            metadata.put("位深度", originalFormat.getSampleSizeInBits());
+            metadata.put("sampleRate", originalFormat.getSampleRate());
+            metadata.put("channels", originalFormat.getChannels());
+            metadata.put("encoding", originalFormat.getEncoding().toString());
+            metadata.put("bitDepth", originalFormat.getSampleSizeInBits());
+            metadata.put("frameRate", originalFormat.getFrameRate());
+            metadata.put("frameSize", originalFormat.getFrameSize());
         }
         return metadata;
     }
 
-    // 统计信息获取
     public Map<String, Object> getPlaybackStatistics() {
         Map<String, Object> stats = new HashMap<>();
-        stats.put("总播放时间", totalPlayTime + " ms");
-        stats.put("当前曲目播放次数", playCount.getOrDefault(
-                audioFile != null ? audioFile.getName() : "", 0));
-        stats.put("播放列表大小", playlist.size());
-        stats.put("当前播放模式", getPlayModeDescription(playMode));
+        stats.put("totalPlayTimeMs", totalPlayTime.get());
+        stats.put("currentTrackPlayCount",
+                playCount.getOrDefault(currentAudioFile != null ?
+                        currentAudioFile.getName() : "", new AtomicInteger(0)).get());
+        stats.put("playlistSize", playlistManager.size());
+        stats.put("playMode", playlistManager.getPlayMode().getDescription());
+        stats.put("playbackState", playbackState.name());
         return stats;
     }
 
-    /**
-     * 获取播放模式描述
-     */
-    private String getPlayModeDescription(int mode) {
-        switch (mode) {
-            case PLAY_MODE_NORMAL: return "顺序播放";
-            case PLAY_MODE_REPEAT_ONE: return "单曲循环";
-            case PLAY_MODE_REPEAT_ALL: return "顺序循环";
-            case PLAY_MODE_SHUFFLE: return "无序循环";
-            default: return "未知模式";
-        }
+    public boolean isPlaying() {
+        return playbackState == PlaybackState.PLAYING;
     }
 
-    // 保留原有的基础功能方法
-    public boolean setVolume(double volume) {
-        if (!volumeSupported || volumeControl == null) return false;
+    public boolean isPaused() {
+        return playbackState == PlaybackState.PAUSED;
+    }
 
-        currentVolume = Math.max(0.0, Math.min(1.0, volume));
+    public boolean isStopped() {
+        return playbackState == PlaybackState.STOPPED;
+    }
 
-        try {
-            if (volumeControl.getType() == FloatControl.Type.MASTER_GAIN) {
-                float dB = (float) (Math.log10(currentVolume == 0 ? 0.0001 : currentVolume) * 20.0);
-                dB = Math.max(minVolume, Math.min(maxVolume, dB));
-                volumeControl.setValue(dB);
-            } else {
-                float linearVolume = (float) (minVolume + (maxVolume - minVolume) * currentVolume);
-                volumeControl.setValue(linearVolume);
+    public List<String> getSupportedSoundEffects() {
+        return new ArrayList<>(soundControls.keySet());
+    }
+
+    public boolean setSoundEffect(String effectType, float value) {
+        FloatControl control = soundControls.get(effectType.toUpperCase());
+        if (control != null) {
+            try {
+                control.setValue(value);
+                return true;
+            } catch (IllegalArgumentException e) {
+                this.logger.error("Invalid value for sound effect: " + effectType, "setSoundEffect", e);
+                return false;
             }
-            notifyVolumeChanged(currentVolume);
-            return true;
-        } catch (IllegalArgumentException e) {
-            return false;
         }
+        return false;
     }
 
-    public double getCurrentTime() {
-        return originalFormat != null ? currentFrame / originalFormat.getFrameRate() : 0;
-    }
+    // ==================== 测试主方法 ====================
 
-    public double getTotalTime() {
-        return originalFormat != null ? totalFrames / originalFormat.getFrameRate() : 0;
-    }
-
-    public double getPlaybackProgress() {
-        return totalFrames > 0 ? (double) currentFrame / totalFrames : 0;
-    }
-
-    // 获取播放列表
-    public List<File> getPlaylist() {
-        return new ArrayList<>(playlist);
-    }
-
-    // 获取当前播放文件
-    public File getCurrentFile() {
-        int index = currentTrackIndex.get();
-        if (index >= 0 && index < playlist.size()) {
-            return playlist.get(index);
-        }
-        return null;
-    }
-
-    // 测试主方法
+    /**
+     * 测试主方法
+     */
     public static void main(String[] args) {
         AdvancedStreamAudioPlayer player = null;
+        NCWLoggerFactory logger = new NCWLoggerFactory("Test");
         try {
-            player = new AdvancedStreamAudioPlayer();
+            player = new AdvancedStreamAudioPlayer(logger);
 
             // 添加事件监听器
+            AdvancedStreamAudioPlayer finalPlayer = player;
             player.addPlaybackEventListener(new PlaybackEventListener() {
-                @Override public void onPlaybackStarted(File file) {
+                @Override
+                public void onPlaybackStarted(File file) {
                     System.out.println("开始播放: " + file.getName());
                 }
-                @Override public void onPlaybackPaused() {
+
+                @Override
+                public void onPlaybackPaused() {
                     System.out.println("播放暂停");
                 }
-                @Override public void onPlaybackResumed() {
+
+                @Override
+                public void onPlaybackResumed() {
                     System.out.println("播放继续");
                 }
-                @Override public void onPlaybackStopped() {
+
+                @Override
+                public void onPlaybackStopped() {
                     System.out.println("播放停止");
                 }
-                @Override public void onPlaybackFinished() {
+
+                @Override
+                public void onPlaybackFinished() {
                     System.out.println("播放完成");
                 }
-                @Override public void onTrackChanged(File previous, File next) {
-                    System.out.println("切换曲目: " + previous.getName() + " -> " + next.getName());
+
+                @Override
+                public void onTrackChanged(File previous, File next) {
+                    System.out.println("切换曲目: " +
+                            (previous != null ? previous.getName() : "无") +
+                            " -> " + next.getName());
                 }
-                @Override public void onError(Exception e) {
+
+                @Override
+                public void onError(Exception e) {
                     System.err.println("播放错误: " + e.getMessage());
-                    e.printStackTrace();
+                    logger.error("WTF", "main", e);
                 }
-                @Override public void onPositionChanged(double position) {
+
+                @Override
+                public void onPositionChanged(double position) {
                     System.out.printf("播放进度: %.1f%%\n", position * 100);
                 }
-                @Override public void onVolumeChanged(double volume) {
+
+                @Override
+                public void onVolumeChanged(double volume) {
                     System.out.printf("音量改变: %.0f%%\n", volume * 100);
                 }
-                @Override public void onPlayModeChanged(int newMode) {
-                    System.out.println("播放模式改变: " + newMode);
+
+                @Override
+                public void onPlayModeChanged(PlayMode newMode) {
+                    System.out.println("播放模式改变: " + newMode.getDescription());
                 }
-                @Override public void onPlaylistUpdated() {
-                    System.out.println("播放列表已更新");
+
+                @Override
+                public void onPlaylistUpdated() {
+                    System.out.println("播放列表已更新，当前大小: " + finalPlayer.getPlaylist().size());
                 }
             });
 
             // 创建测试文件列表
             List<File> testFiles = new ArrayList<>();
-            for (int i = 1; i <= 5; i++) {
+            for (int i = 1; i <= 6; i++) {
                 File file = new File("test" + i + ".wav");
                 if (file.exists()) {
                     testFiles.add(file);
+                } else {
+                    System.out.println("测试文件不存在: " + file.getAbsolutePath());
                 }
             }
 
             if (testFiles.isEmpty()) {
-                System.out.println("请创建test1.wav到test5.wav测试文件");
+                System.out.println("请创建test1.wav到test3.wav测试文件");
                 return;
             }
 
             // 添加到播放列表
+            System.out.println("添加测试文件到播放列表...");
             player.addToPlaylist(testFiles);
-
-            /*
-
-            // 测试不同的播放模式
-            System.out.println("\n=== 测试顺序播放 ===");
-            player.setPlayMode(AdvancedStreamAudioPlayer.PLAY_MODE_NORMAL);
-            player.play(testFiles.get(0).getAbsolutePath());
-            TimeUnit.SECONDS.sleep(2);
-
-            // 测试暂停/恢复
-            System.out.println("\n=== 测试暂停/恢复 ===");
-            player.pause();
-            TimeUnit.SECONDS.sleep(1);
-
-            player.resume();
-            TimeUnit.SECONDS.sleep(2);
-
-            // 测试音量控制
-            System.out.println("\n=== 测试音量控制 ===");
-            player.setVolume(0.5);
-            TimeUnit.SECONDS.sleep(1);
-
-            player.increaseVolume(0.2);
-            TimeUnit.SECONDS.sleep(1);
-
-            player.decreaseVolume(0.3);
-            TimeUnit.SECONDS.sleep(1);
-
-            // 测试跳转
-            System.out.println("\n=== 测试跳转功能 ===");
-            boolean seekResult = player.seekToTime(5.0);
-            System.out.println("跳转结果: " + seekResult);
-            TimeUnit.SECONDS.sleep(2);
-
-            seekResult = player.seekToTime(10.0);
-            System.out.println("跳转结果: " + seekResult);
-            TimeUnit.SECONDS.sleep(2);
-
-            player.stop();
 
             // 测试单曲循环
             System.out.println("\n=== 测试单曲循环 ===");
-            player.setPlayMode(AdvancedStreamAudioPlayer.PLAY_MODE_REPEAT_ONE);
-            player.play(testFiles.get(1).getAbsolutePath());
-            TimeUnit.SECONDS.sleep(3);
+            player.setPlayMode(PlayMode.REPEAT_ONE);
+            player.play(testFiles.get(5).getAbsolutePath());
+            Thread.sleep(Long.parseLong(String.valueOf(player.getTotalTime() * 1000).split("\\.")[0]));
             player.stop();
 
-             */
-
-            // 测试顺序循环
-            System.out.println("\n=== 测试顺序循环 ===");
-            player.setPlayMode(AdvancedStreamAudioPlayer.PLAY_MODE_REPEAT_ALL);
-            player.addToPlaylist(testFiles);
-            player.play(testFiles.get(0).getAbsolutePath());
-            TimeUnit.SECONDS.sleep(1145141919810L);
-
-
-            // 显示统计信息
-            System.out.println("\n=== 播放统计 ===");
-            Map<String, Object> stats = player.getPlaybackStatistics();
-            stats.forEach((k, v) -> System.out.println(k + ": " + v));
+            // 显示音频元数据
+            System.out.println("\n=== 音频元数据 ===");
+            Map<String, Object> metadata = player.getAudioMetadata();
+            metadata.forEach((k, v) -> System.out.println(k + ": " + v));
 
         } catch (Exception e) {
-            e.printStackTrace();
+            logger.error("WTF", "main", e);
         } finally {
             if (player != null) {
                 player.shutdown();
